[package]
name = "ultralight-worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.19", features = ["derive"] }
hex = "0.4.3"
reqwest = { version = "0.11.12", features = ["rustls-tls"], default-features = false }
sha2 = "0.10.6"
aws-config = "0.51.0"
aws-sdk-s3 = "0.21.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"

#btc = { path = "../plonky2-btc/btc" }
#plonky2 = { path = "../plonky2-btc/plonky2" }

btc = { git = "https://github.com/bitcoin-ultralight/plonky2-btc.git", rev = "53d7697bac5a73c80f5e1997446de6671f2bb256" }
plonky2 = { git = "https://github.com/bitcoin-ultralight/plonky2-btc.git", rev = "53d7697bac5a73c80f5e1997446de6671f2bb256" }
rayon = "1.5.3"
