[package]
name = "ultralight-worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.19", features = ["derive"] }
hex = "0.4.3"
reqwest = { version = "0.11.12", features = ["rustls-tls"], default-features = false }
sha2 = "0.10.6"
aws-config = "0.51.0"
aws-sdk-s3 = "0.21.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"

#btc = { path = "../plonky2-btc/btc" }
#plonky2 = { path = "../plonky2-btc/plonky2" }

btc = { git = "https://github.com/bitcoin-ultralight/plonky2-btc.git", rev = "2d5644420f6f6c7d45d1b2b1a9a8e1b99a3ca9f4" }
plonky2 = { git = "https://github.com/bitcoin-ultralight/plonky2-btc.git", rev = "2d5644420f6f6c7d45d1b2b1a9a8e1b99a3ca9f4" }